# IT-Ticket-Resolver-Multiagent-Project

./: .env.example  README.md  agent_test.py  app.py  create_and_upload_index.py  group_chat.py  pyproject.toml
agent/: classifier_agent.py
agents/: knowledge_base_agent.py  notification_agent.py
tools/: knowledge_base_tool.py  send_email.py
utils/: llm_config.py
