[project]
name = "intelligent-it-ticket-resolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen==0.12.1",
    "openai==2.32.0",
    "python-dotenv==1.2.2",
    "azure-search-documents==11.6.0",
    "tqdm==4.67.3",
    "azure-core==1.39.0",
    "streamlit==1.56.0"
]
